fixing advisors title left-align issue

--- a/css/special.css
+++ b/css/special.css
@@ -468,7 +468,7 @@
     font-family: 'Atlas Grotesk Web', sans-serif;
     font-size: 48px;
     line-height: 56px;
-    padding: 20px 0px 32px 0px;
+    padding: 16px 0px 32px 0px;
     text-transform: uppercase;
     text-decoration: none;
     text-align: left;
@@ -498,7 +498,7 @@
 	.style_guide_header {
 		font-size: 34px;
         line-height: 40px;
-        padding: 20px 0px 30px 0px;
+        padding: 10px 0px 28px 0px;
 	}
 
 	.style_guide_subhead {
@@ -517,7 +517,7 @@
 	.style_guide_header {
         font-size: 24px;
         line-height: 32px;
-        padding: 20px 0px 20px 0px;
+        padding: 8px 0px 20px 0px;
 	}
 }
 
